--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,6 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_activity_recipe">RecipeActivity</string>
+    <string name="title_activity_recipe">Recipe</string>
     <string name="title_activity_maps">Map</string>
 </resources>
