--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_recipe">Recipe</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_youtube">YoutubeActivity</string>
 </resources>
